--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  border: 2px solid blue;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -18,8 +19,8 @@ li {
 }
 
 input {
-  margin: 10px;
-  display: inline-block;
+  margin:10px auto;
+  display: block;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -39,6 +40,8 @@ input {
 }
 
 button {
+  display: block;
+  margin: 10px auto;
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
